# bmichatv3

./: .dockerignore  .env.example  .env.production.example  .gitignore  1.0.0  1.21.0  1.9.0  2.2.0  4.20.0  DEPLOYMENT.md  DEPLOYMENT_DETAILS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE.txt  DEPLOYMENT_VPS.md  GUIDE_DEPLOIEMENT.md  HOSTINGER_SETUP.md  MANUAL_DEPLOYMENT_GUIDE.md  QUICK_DEPLOY.md  README.md  README_DEPLOYMENT.md  WIDGET_GUIDE.md  auto-deploy.bat  auto-deploy.sh  check-and-fix.sh  check-documents.sh  check_docs.py  commands-for-server-v2.txt  commands-for-server.txt  debug-api-endpoints.sh  debug-file-content.sh  deploy-clean-v3.ps1  deploy-clean-v3.sh  deploy-commands.txt  deploy-production.sh  deploy-server.sh  deploy-simple-v3.ps1  deploy-simple.ps1  deploy-simple.sh  deploy-to-github-and-vps.sh  deploy-v3-final.ps1  (+46 more)
app/: __init__.py  config.py  main.py
app/core/: database.py  exceptions.py  logging.py
app/models/: __init__.py  analytics.py  base.py  chat.py  document.py  user.py
app/routers/: chat.py  documents.py  health.py  metrics.py  search.py  widget.py
app/services/: chat_service.py  document_manager.py  document_service.py  embedding_service.py  metrics_service.py  qa_chunker.py  reranking_service.py  retrieval_service.py  vector_service.py
deployment/docker/: .env.docker  Dockerfile.backend  Dockerfile.frontend  README.md  WIDGET_TESTING.md  docker-compose.dev.yml  docker-compose.yml  docker-compose.yml.bak.2025-08-02-0950  docker-logs.bat  docker-start.bat  docker-stop.bat  docker-test-widget.bat  docker-test-widget.ps1  docker-test-widget.sh  docker-test.bat  nginx-proxy.conf  nginx.conf  requirements.txt
deployment/nginx/: .gitkeep  nginx.conf
deployment/nginx/conf.d/: default.conf
deployment/scripts/: init_database.py  seed_data.py
docs/: GUIDE DE DÉPLOIEMENT BMI CHAT.txt  OPTIMIZED_RAG_PIPELINE.md  WIDGET_CHAT_ARCHITECTURE.md  instructions.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: .gitkeep  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Analytics.tsx  Chat.tsx  Widgets.tsx  (+4 more)
public/: widget-test-demo.html
scripts/: add_bmi_document.py  add_tresormoney_document.py  add_tresormoney_document_exact.py  add_tresormoney_document_fixed.py  add_tresormoney_simple.py  check_bmi_chunks.py  check_bmi_embeddings.py  check_bmi_in_vector_db.py  check_documents.py  debug_chromadb.py  debug_reranking.py  debug_scoring.py  fix_chromadb_embeddings.py  force_process_bmi.py  install_optimized_rag.py  process_bmi_document.py  recreate_chromadb.py  regenerate_bmi_embeddings.py  test_bmi_final.py  test_bmi_low_threshold.py  test_bmi_no_reranking.py  test_bmi_question.py  test_bmi_search.py  test_bmi_specific.py  test_complete_rag_pipeline.py  test_tresormoney_question.py  test_vector_search.py
tests/: package.json  test_optimized_rag.py
tests/backend/: test_chat_service.py  test_vector_service.py
tests/e2e/: .gitkeep
tests/frontend/: .gitkeep
widget/: README.md  demo.html  package.json  vite.config.js
widget/src/: .gitkeep  chat-widget.js
(+8 files in other folders)
